--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-h1 {
+h1 h3 {
   color: red;
   text-align: center;
 }
 
 img {
-  width: 75%;
-  padding: auto;
+  width: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
